Added Carousel Module

--- a/src/app/components/devices/device.component.html
+++ b/src/app/components/devices/device.component.html
@@ -15,7 +15,7 @@
       <!-- Properties Tab -->
       <md-tab label="Properties">
         <div class="tab-content">
-          <device-properties [device]="device"></device-properties>
+          <device-properties [device]="device" [acl]="acl" (updateDevice)="getDevice($event)"></device-properties>
         </div>
       </md-tab>
 
@@ -43,10 +43,6 @@
       <!-- Visualization Tab -->
       <md-tab label="Visualization">
         <div class="tab-content">
-          <input type="checkbox"/>
-          <input type="checkbox"/>
-          <input type="checkbox"/>
-          
           <device-visualization [device]="device" (updateDevice)="getDevice($event)"></device-visualization>
         </div>
       </md-tab>
