--- a/src/app/components/splash/splash.component.html
+++ b/src/app/components/splash/splash.component.html
@@ -353,8 +353,23 @@
       <div class="section-text-line-right">
         <h4>Gallery</h4>
       </div>
+    </div>
+
+
       <!--<div class="gallery-pic">-->
-      <md-grid-list cols="1" rowHeight="2:1">
+        <md-grid-list cols="3" rowHeight="2:1">
+          <md-grid-tile></md-grid-tile>
+          <md-grid-tile>
+            <div class="gallery-wrapper" style="text-align: center">
+              <app-gallery></app-gallery>
+            </div>
+          </md-grid-tile>
+          <md-grid-tile></md-grid-tile>
+          </md-grid-list>
+
+
+          <!--
+      <md-grid-list cols="2" rowHeight="2:1">
         <md-grid-tile>
           <div class="gallery-wrapper">
             <app-gallery></app-gallery>
@@ -369,63 +384,7 @@
           </div>
         </md-grid-tile>
       </md-grid-list>
-
-
-      <!-- Carousel-->
-<div class="carousel-wrap"> 
-<carousel class='text-center'>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/1.jpg" alt="First slide">
-    <div class="carousel-caption">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/3.jpg" alt="Second slide">
-    <div class="carousel-caption">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/4.jpg" alt="Third slide">
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/5.jpg" alt="Fourth slide">
-    <div class="carousel-caption">
-      <h3>Fourth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/6.jpg" alt="Fifth slide">
-    <div class="carousel-caption">
-      <h3>Fifth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/8.jpg" alt="Sixth slide">
-    <div class="carousel-caption">
-      <h3>Sixth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/8.jpg" alt="Seventh slide">
-    <div class="carousel-caption">
-      <h3>Seventh slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-</carousel>
-</div>
-
+-->
       <!--<div class="gallery-wrapper">-->
       <!--<app-gallery></app-gallery>-->
       <!--</div>-->
@@ -435,7 +394,6 @@
       <!--</h1>-->
       <!--</span>-->
       <!--</div>-->
-    </div>
     <!--Logos CMU/CyLab-->
     <div class="cmu">
       <!--<div class="cmu-pic"></div>-->
