--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,8 +35,11 @@ body {
   color: red;
 }
 
-.img-main-carousel {
-  max-height: 500px;
-  margin:0 auto;
-      margin: 0 50% 0 0;
+.m_class {
+  max-height: 300px;
+}
+
+.gclass {
+  max-height: 100%;
+  max-width: 100%;
 }
