--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,53 +1,18 @@
-<div class='col-sm-6 col-sm-offset-3'>
+ 
+<div class='gclass'>
 <carousel class='text-center'>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/1.jpg" alt="First slide">
-    <div class="carousel-caption">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/3.jpg" alt="Second slide">
-    <div class="carousel-caption">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/4.jpg" alt="Third slide">
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/5.jpg" alt="Fourth slide">
-    <div class="carousel-caption">
-      <h3>Fourth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/6.jpg" alt="Fifth slide">
-    <div class="carousel-caption">
-      <h3>Fifth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/8.jpg" alt="Sixth slide">
-    <div class="carousel-caption">
-      <h3>Sixth slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-  <slide>
-    <img class='img-main-carousel' src="assets/images/gallery/8.jpg" alt="Seventh slide">
-    <div class="carousel-caption">
-      <h3>Seventh slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
+  <slide *ngFor="let pic of pics">
+    <img class= 'm_class' src="{{ pic.url }}" alt="">
   </slide>
 </carousel>
 </div>
+
+<!-- Old Code
+<div class="carousel">
+  <ul class="slides">
+    <li *ngFor="let pic of pics">
+      <img src="{{ pic.url }}" alt="">
+    </li>
+  </ul>
+</div>
+ -->
